# internal/appointments/ports/http/cancel_booking_handler.go
@@ -8,18 +8,18 @@ import (
 	"scheduler/internal/common"
 )
 
-func (h Handlers) CancelAppointment(ctx context.Context, request CancelAppointmentRequestObject) (CancelAppointmentResponseObject, error) {
+func (h Handlers) CancelBooking(ctx context.Context, request CancelBookingRequestObject) (CancelBookingResponseObject, error) {
 	userID := strings.TrimSpace(common.SafeDeref(request.Params.XUserId, ""))
 	if userID == "" {
 		return nil, common.NewUnauthorizedError("missing-user-id", "X-User-Id header is required")
 	}
 
-	if err := h.service.CancelAppointment(ctx, app.CancelAppointment{
+	if err := h.service.CancelBooking(ctx, app.CancelBooking{
 		UserID:          userID,
 		AppointmentUUID: request.AppointmentUuid,
 	}); err != nil {
 		return nil, err
 	}
 
-	return CancelAppointment204Response{}, nil
+	return CancelBooking204Response{}, nil
 }
